[package]
name = "ld46"
version = "0.2.4"
authors = ["Thomas Versteeg <thomasversteeg@gmx.com>"]
license = "AGPL-3.0-or-later"
edition = "2018"
readme = "README.md"
repository = "https://github.com/tversteeg/ld46"
documentation = "https://docs.rs/ld46"
website = "https://tversteeg.nl/ld46"
description = "Fermi Paradox - my entry for Ludum Dare 46"
keywords = ["game", "ludum-dare", "pong"]
categories = ["games"]

[dependencies]
anyhow = "1.0.28"
derive_deref = "1.1.0"
direct-gui = { version = "0.1.25", default-features = false }
fastblur = "0.1.1"
lazy_static = "1.4.0"
#const-tweaker = "0.3.1"
miniquad = "0.2.54"
specs-blit = { version = "0.4.3", default-features = false }
sprite-gen = "0.2.0"
vek = "0.10.1"
