[package]
name = "ld46"
version = "0.2.7-alpha.0"
authors = ["Thomas Versteeg <thomasversteeg@gmx.com>"]
license = "AGPL-3.0-or-later"
edition = "2018"
readme = "README.md"
repository = "https://github.com/tversteeg/ld46"
documentation = "https://docs.rs/ld46"
homepage = "https://tversteeg.nl/ld46"
description = "Fermi Paradox - my entry for Ludum Dare 46"
keywords = ["game", "ludum-dare", "pong"]
categories = ["games"]

[dependencies]
anyhow = "1.0.61"
derive_deref = "1.1.0"
direct-gui = { version = "0.1.25", default-features = false }
fastblur = "0.1.1"
#const-tweaker = "0.3.1"
miniquad = "0.2.54"
specs-blit = { version = "0.5.1", default-features = false }
sprite-gen = "0.2.0"
vek = "0.10.2"
