[package]
name = "ld46"
version = "0.2.7"
authors = ["Thomas Versteeg <thomasversteeg@gmx.com>"]
license = "AGPL-3.0-or-later"
edition = "2018"
readme = "README.md"
repository = "https://github.com/tversteeg/ld46"
documentation = "https://docs.rs/ld46"
homepage = "https://tversteeg.nl/ld46"
description = "Fermi Paradox - my entry for Ludum Dare 46"
keywords = ["game", "ludum-dare", "pong"]
categories = ["games"]

[dependencies]
anyhow = "1.0.71"
derive_deref = "1.1.1"
direct-gui = { version = "0.1.26", default-features = false }
fastblur = "0.1.1"
#const-tweaker = "0.3.1"
miniquad = "0.3.16"
quad-rand = "0.2.1"
specs-blit = { version = "0.5.1", default-features = false }
sprite-gen = "0.2.0"
vek = "0.15.10"
